--- a/_config.yml
+++ b/_config.yml
@@ -125,4 +125,4 @@ deploy:
   type: git
   repo: git@github.com:ArtarisCN/ArtarisCN.github.io.git
   # example, https://github.com/hexojs/hexojs.github.io
-  branch: gh-pages
+  branch: blog-page
